# Anomaly

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
apps/backend/: Dockerfile  Dockerfile.worker  README.md  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  incidents.py  jobs.py  logs.py  stream.py  summary.py  topology.py
apps/backend/app/core/: config.py  redis.py  security.py
apps/backend/app/domain/: __init__.py  health.py
apps/backend/app/repositories/: postgres_repository.py
apps/backend/app/schemas/: auth.py  common.py  incidents.py  jobs.py  logs.py  summary.py  topology.py
apps/backend/app/services/: demo_data_service.py  incidents_service.py  ldap_service.py  llm_service.py  loki_service.py  nebula_service.py  ollama_mlflow_wrapper.py  summary_service.py
apps/backend/app/workers/: tasks.py
apps/backend/tests/: test_health.py  test_incidents.py
apps/frontend/: Dockerfile  README.md  package-lock.json  package.json
deploy/ec2-airgap/: README.md  docker-compose.offline.yml  install-offline.sh  package-online.sh
deploy/helm/: README.md
rest_aiops_api/: README.md  aiops_client.py  db.py  main.py  ollama_client.py  rca_logic.py  schemas.py  settings.py  time_window.py
scripts/: cloud-agent-bootstrap.sh  cloud-agent-verify.sh
web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.tsbuildinfo
(+42 files in other folders)
